# DSmartCorrugator

./: .env.example  .gitignore  01-formula-master.md  02-system-flow-master.md  03-admin-flow-master.md  04-ui-ux-master.md  05-execution-gap-plan.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ai_templates.py  0003_gaps.py
backend/app/: config.py  database.py  main.py  redis_client.py
backend/app/api/v1/: auth.py  paper.py  quotes.py  settings.py  team.py
backend/app/core/: __init__.py  rbac.py  security.py  session.py
backend/app/formulas/: __init__.py  engine.py
backend/app/middleware/: session_tenant.py
backend/app/models/: __init__.py  audit.py  base.py  paper.py  quote.py  settings.py  tenant.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: RichHtmlEditor.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/lib/: api.ts  queryClient.ts  utils.ts
frontend/src/lib/formulas/: engine.ts
frontend/src/pages/: BulkCostingPage.tsx  DashboardPage.tsx  LoginPage.tsx  PaperPricingPage.tsx  QuoteDetailPage.tsx  QuotesPage.tsx  RegisterPage.tsx  ReportsPage.tsx  SettingsPage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
