[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "boxcostpro-backend"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis[hiredis]==5.0.4",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart==0.0.9",
    "pydantic[email]==2.7.1",
    "pydantic-settings==2.3.1",
    "cryptography==42.0.8",
    "aiofiles==23.2.1",
    "openpyxl==3.1.2",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "boto3==1.34.95",
    "apscheduler==3.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
